--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
             const MAPBOX_TOKEN = 'pk.eyJ1IjoiZjFtaWRlciIsImEiOiJjanVveXpocGUxMmpuNDNwZ3BvYTRkNmxlIn0.KtfkdnedY_35MBTyQZp1Rw';
             const WARNING_MESSAGE = 'Please Provide a Mapbox Token in order to use Kepler.gl. Edit this file and fill out MAPBOX_TOKEN with your access key';
           </script>
-          
+
 </head>
 
 <body>
@@ -60,7 +60,7 @@
         <div class="slides">
 
             <section>
-                <p>Hello World</p>
+                <p>Hello World!</p>
             </section>
 
             <section>
