test vegalite and reveal

--- a/test2.html
+++ b/test2.html
@@ -50,6 +50,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
     <script src="figure1.js"></script>
 
-/body>
+</body>
 
 </html>
