--- a/index.html
+++ b/index.html
@@ -28,29 +28,7 @@
     <div id="vis"></div>
 
     <!-- This is from the example embedded vega-lite demo -->
-    <script type="text/javascript">
-    var yourVlSpec = 
-        {
-                $schema: 'https://vega.github.io/schema/vega-lite/v3.0.json',
-                description: 'A simple bar chart with embedded data.',
-                data: {
-                    name: 'champaign_zoning', url: './champaign.topojson',
-                    "format": {
-                        "type": "topojson",
-                        "feature": "Zoning"
-                    }
-                },
-                "mark": "geoshape",
-                "projection": {
-                    "type": "albersUsa"
-                },
-                "encoding": {
-                    "color": {"field": "properties.zoning_code", "type": "nominal"}
-                }
-            };
-            
-            var embedded = vegaEmbed('#vis', yourVlSpec);
-    </script>
+    <script src="figure1.js"></script>
     
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
