--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Haocong Cheng's SPR2019-ADV Project</title>
@@ -21,6 +22,7 @@
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
 
 </head>
+
 <body>
 
     <h1>Hello there!</h1>
@@ -28,8 +30,93 @@
     <div id="vis"></div>
 
     <!-- This is from the example embedded vega-lite demo -->
-    <script src="figure1.js"></script>
-    
-<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
+    <script type="text/javascript">
+        var yourVlSpec =
+        {
+            "$schema": "https://vega.github.io/schema/vega-lite/v3.0.json",
+            "description": "A simple bar chart with embedded data.",
+            "data": {
+                "url": "https://raw.githubusercontent.com/F1Mider/spr2019-adv-project/master/rides.csv"
+            },
+            "hconcat": [
+                {
+                    "layer": [
+                        {
+                            "data": {
+                                "url": "https://raw.githubusercontent.com/F1Mider/spr2019-adv-project/master/N02-17_GML/N02-17_RailroadSection.geojson",
+                                "format": { "property": "features" }
+                            },
+                            "mark": "geoshape",
+                            "encoding": { "color": { "value": "gray" } }
+                        },
+                        {
+                            "selection": {
+                                "station_choice": { "fields": ["station_name_x"], "type": "single" },
+                                "type_choice": {
+                                    "fields": ["type"],
+                                    "type": "single",
+                                    "bind": {
+                                        "input": "select",
+                                        "options": [null, "ＪＲ", "モノレール", "地下鉄", "新交通", "路面電車", "私鉄"]
+                                    }
+                                }
+                            },
+                            "mark": "circle",
+                            "encoding": {
+                                "longitude": { "field": "lon_x", "type": "quantitative" },
+                                "latitude": { "field": "lat_x", "type": "quantitative" },
+                                "tooltip": [
+                                    { "field": "station_name_x", "type": "nominal" }
+                                ]
+                            },
+                            "width": 900,
+                            "height": 1000
+                        }
+                    ]
+                },
+                {
+                    "vconcat": [
+                        {
+                            "mark": "bar",
+                            "transform": [{ "filter": { "selection": "station_choice" } }],
+                            "encoding": {
+                                "x": { "bin": true, "field": "distance", "type": "quantitative" },
+                                "y": { "aggregate": "count", "type": "quantitative" }
+                            }
+                        },
+                        {
+                            "mark": "bar",
+                            "transform": [{ "filter": { "selection": "station_choice" } }],
+                            "encoding": {
+                                "y": { "field": "type", "type": "nominal" },
+                                "x": { "aggregate": "count", "type": "quantitative" }
+                            }
+                        },
+                        {
+                            "mark": "bar",
+                            "transform": [{ "filter": { "selection": "station_choice" } }],
+                            "encoding": {
+                                "y": { "field": "seat", "type": "nominal" },
+                                "x": { "aggregate": "count", "type": "quantitative" }
+                            }
+                        },
+                        {
+                            "mark": "bar",
+                            "transform": [{ "filter": { "selection": "station_choice" } }],
+                            "encoding": {
+                                "y": { "field": "service", "type": "nominal" },
+                                "x": { "aggregate": "count", "type": "quantitative" }
+                            }
+                        }
+                    ]
+                }
+            ]
+        };
+
+        var embedded = vegaEmbed('#vis', yourVlSpec);
+    </script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 </body>
+
 </html>
