--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/lib/js/head.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/vega@3"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed"></script>
 
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
 
@@ -27,11 +27,11 @@
 
     <h1>Hello there!</h1>
 
-    <div id="vis"></div>
+    <div id="vis2"></div>
 
     <!-- This is from the example embedded vega-lite demo -->
     <script type="text/javascript">
-        var yourVlSpec =
+        var vlSpec =
         {
             "$schema": "https://vega.github.io/schema/vega-lite/v3.0.json",
             "description": "A simple bar chart with embedded data.",
@@ -113,7 +113,7 @@
             ]
         };
 
-        var embedded = vegaEmbed('#vis', yourVlSpec);
+        var embedded = vegaEmbed('#vis2', vlSpec);
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
