--- a/test2.html
+++ b/test2.html
@@ -49,7 +49,7 @@
 </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
     <script type="text/javascript">
-        var yourVlSpec = 
+        var lSpec = 
             {
                     $schema: 'https://vega.github.io/schema/vega-lite/v3.0.json',
                     description: 'A simple bar chart with embedded data.',
@@ -69,7 +69,7 @@
                     }
                 };
                 
-                var embedded = vegaEmbed('#vis', yourVlSpec);
+                var embedded = vegaEmbed('#vis3', lSpec);
         </script>
 
 </body>
