vegalite reveal test

--- a/test2.html
+++ b/test2.html
@@ -19,6 +19,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed"></script>
 
+    <script src=figure1.js></script>
+
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
 
 </head>
