vegalite reveal test

--- a/test2.html
+++ b/test2.html
@@ -32,6 +32,12 @@
             <section data-markdown="my_presentation.md">
             
             </section>
+            <section>
+                    <div id="vis3"></div>
+            </section>
+            <section>
+                    <div id="vis2"></div>
+            </section>
 
         </div>
     </div>
