--- a/vegalite.html
+++ b/vegalite.html
@@ -23,14 +23,14 @@
         {
             "$schema": "https://vega.github.io/schema/vega-lite/v3.0.json",
             "data": {
-                "url": "https://raw.githubusercontent.com/F1Mider/spr2019-adv-project/master/rides.csv"
+                "url": "./rides.csv"
             },
             "hconcat": [
                 {
                     "layer": [
                         {
                             "data": {
-                                "url": "https://raw.githubusercontent.com/F1Mider/spr2019-adv-project/master/N02-17_GML/N02-17_RailroadSection.geojson",
+                                "url": "./N02-17_GML/N02-17_RailroadSection.geojson",
                                 "format": { "property": "features" }
                             },
                             "mark": "geoshape",
